# ttsignal

./: .gitignore  CLAUDE.md  README.md
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/example/ttsignal/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/org/difft/android/smp/: Config.java  Connection.java  Connector.java  Example.java  IConnectionHandler.java  Packet.java
android/app/src/main/java/org/example/ttsignal/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/ttsignal/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/scripts/: build-so.sh  zip-output.sh
docs/: multi-alpn-usage.md
ios/: PLAN_A_EXPERIMENT_REPORT.md  PLAN_C_DESIGN.md  SYMBOL_COLLISION_FIX_REPORT.md
ios/QUICTest/: ContentView.swift  Logging.swift  QUICClientDemo.swift  QUICTestApp.swift  TTSignalConfig.swift  TTSignalConnection.swift  TTSignalConnector.swift  TTSignalHandler.swift  TTSignalLog.swift  TTSignalPacket.swift  TTSignalStream.swift
ios/QUICTest.xcodeproj/: project.pbxproj
ios/scripts/: build-all-and-upload.sh  build-all.sh  build-core.sh  build-deps.sh  build-quictest.sh  build-xcframework.sh  publish-to-release-repo.sh  purge-leaky-releases.sh  release-xcframework.sh
ios/templates/: LICENSE  Package.swift.in  README.md.in  TTSignal.podspec.in  gitignore
scripts/: build-for-linux-and-macos.sh  build-for-win.bat  upload-release-for-linux-and-macos.sh  upload-release-for-win.bat  verify-no-sensitive-info.py
src/: CMakeLists.txt
src/cpp/: INetworkPathMonitor.h  Interface.cpp  Interface.h  Runtime.cpp  Runtime.h  SMPConnector.cpp  SMPConnector.h  SMPParser.cpp  SMPParser.h  SMPServer.cpp  SMPServer.h  SMPacket.cpp  SMPacket.h  StdAfx.cpp  StdAfx.h  UDPSender.cpp  UDPSender.h  UDPSenderGroup.cpp  UDPSenderGroup.h  Utils.cpp  Utils.h
src/cpp/apple/: AppleNetworkMonitor.h  AppleNetworkMonitor.mm  CMakeLists.txt  ios_bridge.h  ios_bridge.mm  ios_logger.h  ios_logger.mm  module.modulemap
src/cpp/cmake/: ios.toolchain.cmake  linux.arm64.toolchain.cmake  linux.x64.toolchain.cmake  macos.x64.toolchain.cmake  mingw.x64.toolchain.cmake
src/cpp/jni/: JNI_SMPConfig.cpp  JNI_SMPConfig.h  JNI_SMPConnectorWrap.cpp  JNI_SMPConnectorWrap.h  JNI_SMPServerWrap.cpp  JNI_SMPServerWrap.h  JNI_SMPacketWrap.cpp  JNI_SMPacketWrap.h  RPCStub.cpp  RPCStub.h  dllmain.cpp  jni_utils.cpp  jni_utils.h
src/cpp/linux/: CMakeLists.txt  LinuxNetlinkMonitor.cpp  LinuxNetlinkMonitor.h
src/cpp/napi/: JsExchanger.cpp  JsExchanger.h  JsSMPConnectorWrap.cpp  JsSMPConnectorWrap.h  JsSMPServerWrap.cpp  JsSMPServerWrap.h  RPCStub.cpp  RPCStub.h  UVExchanger.cpp  UVExchanger.h  Utils.cpp  Utils.h  dllmain.cpp  macros.h
src/cpp/win32/: CMakeLists.txt  WinIpChangeMonitor.cpp  WinIpChangeMonitor.h  win_delay_load_hook.c
src/java/: MANIFEST.MF
src/java/org/difft/android/smp/: Config.java  Connection.java  Example.java  IConnectionHandler.java  IStreamHandler.java  Stream.java
src/java/org/example/ttsignal/: MainActivity.kt
src/js/: index.js  package.json
src/swift/: TTSignalConfig.swift  TTSignalConnection.swift  TTSignalConnector.swift  TTSignalHandler.swift  TTSignalLog.swift  TTSignalPacket.swift  TTSignalStream.swift
